--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.5.0",
     "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.15.0",
     "react-webcam": "^7.2.0",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "rollup": "^4.39.0",
+    "vite": "^6.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -32,7 +35,6 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "globals": "^15.14.0"
   }
 }
